--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,25 +1,28 @@
 @media (min-width: 500px) {
   .logo {
-    padding-left: 0%;
-  }
+    font-size: 1.35em;
+}
   .logo-nav {
-    margin-left: 5%;
+    margin: 2% 5% 2% 5%;
+    grid-template-columns: 2.4fr 1fr;
   }
   .navigation {
     flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 5%;
-    grid-area: 2/2/2/1;
+    justify-content: space-between;
+    justify-self: self-start;
+    width: 70%;
+   
   }
   .navigation > a {
-    font-size: 0.9em;
+    font-size: 0.75em;
+
   }
   .donation {
-    padding: 0% 0% 0% 5%;
     grid-area: 1/2/1/2;
   }
   .donation-btn {
-    padding: 5% 10% 5% 10%;
+    padding: 9%;
+    justify-self: center;
   }
   .main-page {
     background-size: 190% auto;
@@ -229,11 +232,8 @@
   }
 }
 @media (min-width: 900px) {
-  header {
-    margin: 2%;
-  }
   .logo-nav {
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 0.75fr;
   }
   .logo {
     grid-area: 1/1/1/1;
@@ -242,10 +242,15 @@
     grid-area: 1/2/1/2;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 0%;
+    width: 100%;
   }
   .donation {
     grid-area: 1/3/1/3;
+    margin-top: 0%;
+    align-self: center;
+  }
+  .donation-btn{
+    padding: 5% 10% 5% 10%;
   }
   .main-page {
     grid-template-columns: 1fr 1fr;
@@ -301,7 +306,7 @@
     padding-bottom: 4em;
   }
   .what-we-do-heading > div {
-    width: 10em;
+    width: 7em;
   }
   .what-we-do-heading-content {
     font-size: 2.5em;
@@ -321,7 +326,7 @@
     height: 35em;
   }
   .what-we-do-div-content > * {
-    text-align: left;
+    text-align: center;
     padding-bottom: 1rem;
   }
   .what-we-do-img {
